--- a/main.html
+++ b/main.html
@@ -7,6 +7,18 @@
 </head>
 
 <body>
+	<div class="container" >
+		<p>this is first para</p>
+		<p>this is second para</p>
+		<p>this is third para</p>
+		<ul>
+			<li>first item</li>
+			<li>second item</li>
+			<li>third item</li>
+			<li>forth item</li>
+			<li>five item</li>
+		</ul>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
