--- a/main.html
+++ b/main.html
@@ -7,18 +7,21 @@
 </head>
 
 <body>
-	<div class="container" >
-		<p>this is first para</p>
-		<p>this is second para</p>
-		<p>this is third para</p>
-		<ul>
-			<li>first item</li>
-			<li>second item</li>
-			<li>third item</li>
-			<li>forth item</li>
-			<li>five item</li>
-		</ul>
-	</div>
+	<div class="container">
+  <article>
+    <p>First paragraph: White text on a black background</p>
+    <p>Second paragraph: Standard text color</p>
+    <p>Third paragraph: Red text</p>
+  </article>
+  
+  <ul class="list">
+    <li>First item</li>
+    <li>Second item</li>
+    <li>Third item</li>
+    <li>Fourth item</li>
+    <li>Fifth item</li>
+  </ul>
+</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
