--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
   <article>
     <p>First paragraph: White text on a black background</p>
     <p>Second paragraph: Standard text color</p>
+	   <p>Second paragraph: Standard text color</p>
     <p>Third paragraph: Red text</p>
   </article>
   
